discussion/kv_engine/177062/177062_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Turn FCManager::consumersMap into a folly::Sync set

Two changes here:
1. From mutex to folly::Synchronized, for easier thread safety
2. From map<Cookie, DcpConsumer*> to set<DcpConsumer*>

(2) is all what we need for modifying/accessing the structure as all
the related FCManager API takes DcpConsumer* in input.

Change-Id: Ie7d307de48dfd6685b5515f7321a714de1aae30c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 07:42:52.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 07:47:41.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47442/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47442/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8334/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19776/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19776/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20898/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20898/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20545/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20545/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21553/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21553/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28932/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28932/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8432/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8432/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18656/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:25: error: template argument for template type parameter must be a type [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Synchronized.h:563:17: note: template parameter is declared here
template <class T, class Mutex = SharedMutex>
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:30: error: no template named "set" in namespace "std"; did you mean "get"? [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                             ^~~
                             get
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/utility:223:5: note: "get" declared here
    get(std::pair<_Tp1, _Tp2>& __in) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18656/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:25:
error: template argument for template type parameter must be a type [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18656/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39857/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:30:
error: no template named "set" in namespace "std"; did you mean "get"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39857/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39857/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17809/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
